--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 !!!
 html
   head
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='./stylesheets/style.css')
     link(rel='stylesheet', href='http://code.leafletjs.com/leaflet-0.3.1/leaflet.css')
     script(type='text/javascript', src='http://code.leafletjs.com/leaflet-0.3.1/leaflet.js')
     script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
